fix buttons wrapping in dialog for uploading images

--- a/frontend/src/components/pages/app-crop/app-crop.scss
+++ b/frontend/src/components/pages/app-crop/app-crop.scss
@@ -44,8 +44,9 @@
 
 .dialog-footer {
   display: flex;
+  flex-wrap: wrap;
 
-  button {
+  app-button {
     flex: 1 1 0;
   }
 }
